bugs.txt
In file included from main.cpp:1:
os_interface.cpp: In function 'void report_util()':
os_interface.cpp:287:32: error: 'get_timestamp' was not declared in this scope
  287 |     log << "===== Report (" << get_timestamp() << ") =====\n";
      |                                ^~~~~~~~~~~~~
os_interface.cpp: In function 'void accept_main_menu_input(std::string, OSState*, Process**)':
os_interface.cpp:500:45: error: 'class Scheduler' has no member named 'computeUtilization'
  500 |             float util      = os_scheduler->computeUtilization();
      |                                             ^~~~~~~~~~~~~~~~~~
os_interface.cpp:501:45: error: 'class Scheduler' has no member named 'numBusyCores'
  501 |             int   usedCores = os_scheduler->numBusyCores();
      |                                             ^~~~~~~~~~~~
os_interface.cpp:519:43: error: 'stateOrder' was not declared in this scope
  519 |                 for (ProcessState state : stateOrder) {
      |                                           ^~~~~~~~~~
os_interface.cpp:527:29: error: expected primary-expression before '<<' token
  527 |                             << std::setw(coreWidth) << "CORE"
      |                             ^~